--- a/MothWeb/MothWeb/index.html
+++ b/MothWeb/MothWeb/index.html
@@ -6,6 +6,25 @@
     <title>mothweb</title>
 </head>
 <body>
-    boo
+    <div>
+        <h2>Available dates</h2>
+        <select id="recordDate" />
+    </div>
+
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
+    <script>
+    var uri = 'api/Records';
+
+    $(document).ready(function () {
+        // send an ajax request
+        $.getJSON(uri)
+            .done(function (data) {
+                // On success, 'data' should contain a list of of RecordEvents...
+                $.each(data, function(key, item) {
+                    $('<option>', {text: item.Date}).appendTo($('#recordDate'));
+                });
+            });
+    });
+    </script>
 </body>
 </html>
