--- a/MothWeb/MothWeb/index.html
+++ b/MothWeb/MothWeb/index.html
@@ -8,7 +8,14 @@
 <body>
     <div>
         <h2>Available dates</h2>
-        <select id="recordDate" />
+        <select id="recordDate" onchange="getRecord();">
+            <!--http://stackoverflow.com/questions/4350937/html-select-dropdown-list/14406006#14406006-->
+            <option value="" disabled selected>Select a date</option>             
+        </select>
+    </div>
+    <div>
+        <h2>Event data</h2>
+        <p id="EventData" />
     </div>
 
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
@@ -21,10 +28,16 @@
             .done(function (data) {
                 // On success, 'data' should contain a list of of RecordEvents...
                 $.each(data, function(key, item) {
-                    $('<option>', {text: item.Date}).appendTo($('#recordDate'));
+                    //$('<option>', {text: item.Date}).appendTo($('#recordDate'));
+                    $('<option>', {value: item.Date, text: item.Date }).appendTo($('#recordDate'));
                 });
             });
     });
+
+    function getRecord() {
+        var date = $('#recordDate').find(":selected").text();
+        $('#EventData').text(date);
+    }
     </script>
 </body>
 </html>
