--- a/MothWeb/MothWeb/index.html
+++ b/MothWeb/MothWeb/index.html
@@ -20,23 +20,32 @@
 
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
     <script>
-    var uri = 'api/Records';
+    var uri = 'api/Records';    
 
     $(document).ready(function () {
         // send an ajax request
         $.getJSON(uri)
             .done(function (data) {
-                // On success, 'data' should contain a list of of RecordEvents...
-                $.each(data, function(key, item) {
+                // On success, 'data' should contain a list of date strings 'YYYY-MM-DD' ...
+                $.each(data, function (key, item) {
                     //$('<option>', {text: item.Date}).appendTo($('#recordDate'));
-                    $('<option>', {value: item.Date, text: item.Date }).appendTo($('#recordDate'));
+                    $('<option>', {value: item, text: item }).appendTo($('#recordDate'));
                 });
             });
     });
 
     function getRecord() {
+        //var date = $('#recordDate').find(":selected").text();
+        //$('#EventData').text(date);
         var date = $('#recordDate').find(":selected").text();
-        $('#EventData').text(date);
+        $.getJSON(uri + '/date?fullDate=' + date)
+            .done(function (data) {
+                // On success, 'data' should contain a list of date strings 'YYYY-MM-DD' ...
+                $.each(data, function (key, item) {
+                    $('<li>', { text: "Date: " + item.Date }).appendTo($('#EventData'));
+                    //$('#EventData').text("Date: " + item.Date);
+                });
+            });
     }
     </script>
 </body>
